tdf#119112: during epub export, each svg image appears twice

It's because by default LO also insert replacement image since svg is a vector format
but for epub we shouldn't use this mechanism.
So retrieve the old value of AddReplacementImages option and set it to false temporarily.

Change-Id: I5156c386a089fa0f88018872e546afc3a1e0b5f6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/205807
Tested-by: Jenkins
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>