writerperfect/Library_wpftwriter.mk
@@ -35,6 +35,10 @@ $(eval $(call gb_Library_use_sdk_api,wpftwriter))
 
 $(eval $(call gb_Library_use_common_precompiled_header,wpftwriter))
 
+$(eval $(call gb_Library_use_custom_headers,wpftwriter,\
+    officecfg/registry \
+))
+
 $(eval $(call gb_Library_use_libraries,wpftwriter,\
 	comphelper \
 	cppu \
